RESOLVED FIXED29262
Compositing layers are incorrectly positioned after scrolling with position:fixed
https://bugs.webkit.org/show_bug.cgi?id=29262
Summary Compositing layers are incorrectly positioned after scrolling with position:f...
webkit
Reported 2009-09-14 16:02:42 PDT
Do test with : http://fgribreau.com/_index_.php ---------------- -- Second bug -- ---------------- -> Produce the bug: Scroll down (via multi-touch or mouse wheel) AND move your pointer in the screen center. Blue "link" box would appear because of: .post:hover aside{opacity:1;-webkit-transition:opacity 0.1s linear;} If you scroll down/up when an animation occure on the "blue "link" box", the entire header will "jump",freeze (because he's in fixed positioning) -> What I except: The header wouldn't "jump".
Attachments
Testcase (1.02 KB, text/html)
2009-09-17 14:37 PDT, Simon Fraser (smfr)
no flags
Patch, changelog, testcase (8.67 KB, patch)
2009-09-17 18:11 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-09-17 14:37:14 PDT
Created attachment 39726 [details] Testcase
Simon Fraser (smfr)
Comment 2 2009-09-17 18:11:42 PDT
Created attachment 39741 [details] Patch, changelog, testcase
Dave Hyatt
Comment 3 2009-09-18 10:00:20 PDT
Comment on attachment 39741 [details] Patch, changelog, testcase r=me
Simon Fraser (smfr)
Comment 4 2009-09-18 13:31:01 PDT
Note You need to log in before you can comment on or make changes to this bug.